[tool.poetry]
name = "python-api-workshop"
version = "0.1.0"
description = ""
authors = ["J. Offenberg <jelmer.offenberg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
sqlalchemy-orm = "^1.2.10"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
